change image name and design hero section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   
 <div class="container">
-    <nav class="navbar navbar-expand-lg cust__black mt-4">
+    <nav class="navbar navbar-expand-lg cust__black mt-4 mb-4">
         <div class="container-fluid">
           <a class="navbar-brand" href="#" fw-bold>Corporate</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +26,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Features</a>
@@ -45,9 +45,10 @@
 
 
 <section class="hero__section">
-    <div class="container-fluid">
+    <div class="container-fluid cust__bg">
         <div class="container">
-
+          <p class="pt-5">WE HAVE !</p>
+          <h2 class="text-uppercase"><br> world best award wining <br> <span class="cust__primary"> Architecture</span> .You are going to love it.</h2>
         </div>
       </div>
       
