--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
 <div class="container">
     <nav class="navbar navbar-expand-lg cust__black mt-4 mb-4">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#" fw-bold>Corporate</a>
+          <a class="navbar-brand" href="#"><h3 class="fw-bold cust__primary">Corporate</h3></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+                <a class="nav-link fw-bold cust__primary" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link fw-bold cust__primary" href="#">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link fw-bold cust__primary" href="#">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Disabled</a>
+                <a class="nav-link fw-bold cust__primary" href="#">Disabled</a>
               </li>
             </ul>
           </div>
@@ -47,8 +47,8 @@
 <section class="hero__section">
     <div class="container-fluid cust__bg">
         <div class="container">
-          <p class="pt-5">WE HAVE !</p>
-          <h2 class="text-uppercase"><br> world best award wining <br> <span class="cust__primary"> Architecture</span> .You are going to love it.</h2>
+          <p class="pt-5 fw-bold" style="transform: translateY(3rem);">WE HAVE !</p>
+          <h3 class="text-uppercase fw-bold"><br> world best award wining <br> <span class="cust__primary"> Architecture</span> .You are going to love it.</h3>
         </div>
       </div>
       
