design the hole card section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,61 @@
       </div>
       
 </section>
+
+<section class="grid__section">
+  <div class="container-fluid">
+    <div class="container">
+
+<h3 class="cust__grid__title text-center fw-bold mt-5 mb-5" style="color: white !important;">OUR CURRENT PROJECT</h3>
+
+        <div class="row row-cols-3">
+          <div class="col">
+            <div class="card">
+             <div class="card__body p-2">
+
+              <img src="./images/building1.ddf65f44.jpg" alt="" class="card__img">
+              <h4 class="fw-bold mt-1 mb-2">The corporate heading</h4>
+              <p>We provide some grate building what you are looking for we know.
+                for any help just contact us in down below.
+              </p>
+
+             </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card">
+              <div class="card__body p-2">
+
+                <img src="./images/building2.67c5fb0d.jpg" alt="" class="card__img">
+              <h4 class="fw-bold mt-1 mb-2">The corporate heading</h4>
+              <p>We provide some grate building what you are looking for we know.
+                for any help just contact us in down below.
+              </p>
+
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card">
+             <div class="card__body p-2">
+
+              <img src="./images/building3.fda5fb6f.jpg" alt="" class="card__img">
+              <h4 class="fw-bold mt-1 mb-2">The corporate heading</h4>
+              <p>We provide some grate building what you are looking for we know.
+                for any help just contact us in down below.
+              </p>
+
+             </div>
+            </div>
+          </div>
+
+        </div>
+  
+    </div>
+  </div>
+</section>
     <!-- bootstrap__js__jquary -->
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
