added style for mobile responsive

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
 
 <h3 class="cust__grid__title text-center fw-bold mt-5 mb-5" style="color: white !important;">OUR CURRENT PROJECT</h3>
 
-        <div class="row row-cols-3">
-          <div class="col">
+        <div class="row">
+
+          <div class="col-md col-sm">
             <div class="card">
              <div class="card__body p-2">
 
@@ -75,7 +76,7 @@
             </div>
           </div>
 
-          <div class="col">
+          <div class="col-md col-sm">
             <div class="card">
               <div class="card__body p-2">
 
@@ -89,7 +90,7 @@
             </div>
           </div>
 
-          <div class="col">
+          <div class="col-md col-sm">
             <div class="card">
              <div class="card__body p-2">
 
