--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
 <body>
   
 <div class="container">
-    <nav class="navbar navbar-expand-lg cust__black mt-4 mb-4">
+    <nav class="navbar navbar-expand-lg cust__black mt-4 mb-4 navbar-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><h3 class="fw-bold cust__primary">Corporate</h3></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon navbar-toggler-light"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link fw-bold cust__primary" aria-current="page" href="#">Home</a>
+                <a class="nav-link fw-bold cust__primary__nav" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold cust__primary" href="#">Features</a>
+                <a class="nav-link fw-bold cust__primary__nav" href="#">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold cust__primary" href="#">Pricing</a>
+                <a class="nav-link fw-bold cust__primary__nav" href="#">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold cust__primary" href="#">Disabled</a>
+                <a class="nav-link fw-bold cust__primary__nav" href="#">Disabled</a>
               </li>
             </ul>
           </div>
@@ -60,14 +60,14 @@
 
 <h3 class="cust__grid__title text-center fw-bold mt-5 mb-5" style="color: white !important;">OUR CURRENT PROJECT</h3>
 
-        <div class="row">
+        <div class="row cust__md__col">
 
-          <div class="col-md col-sm">
+          <div class="cust__col__md col-sm">
             <div class="card">
              <div class="card__body p-2">
 
               <img src="./images/building1.ddf65f44.jpg" alt="" class="card__img">
-              <h4 class="fw-bold mt-1 mb-2">The corporate heading</h4>
+              <h4 class="fw-bold cust__sub__head" >The corporate heading</h4>
               <p>We provide some grate building what you are looking for we know.
                 for any help just contact us in down below.
               </p>
@@ -76,7 +76,7 @@
             </div>
           </div>
 
-          <div class="col-md col-sm">
+          <div class="cust__col__md col-sm">
             <div class="card">
               <div class="card__body p-2">
 
@@ -90,7 +90,7 @@
             </div>
           </div>
 
-          <div class="col-md col-sm">
+          <div class="cust__col__md col-sm">
             <div class="card">
              <div class="card__body p-2">
 
