successfully change class name

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <h3 class="cust__grid__title text-center fw-bold mt-5 mb-5" style="color: white !important;">OUR CURRENT PROJECT</h3>
 
-        <div class="row cust__md__col">
+        <div class="row cust__md__row">
 
           <div class="cust__col__md col-sm">
             <div class="card">
