added contact section with inline css and utility class and end of commit

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <div class="container-fluid">
     <div class="container">
 
-<h3 class="cust__grid__title text-center fw-bold mt-5 mb-5" style="color: white !important;">OUR CURRENT PROJECT</h3>
+<h3 class="cust__grid__title text-center fw-bold mt-5 mb-5" style="color: white !important;"><span style="color: rgb(90, 47, 245);">OUR</span> CURRENT PROJECT</h3>
 
         <div class="row cust__md__row">
 
@@ -67,7 +67,7 @@
              <div class="card__body p-2">
 
               <img src="./images/building1.ddf65f44.jpg" alt="" class="card__img">
-              
+
               <h4 class="fw-bold cust__sub__head" >The corporate heading</h4>
               <p>We provide some grate building what you are looking for we know.
                 for any help just contact us in down below.
@@ -107,6 +107,28 @@
 
         </div>
   
+    </div>
+  </div>
+</section>
+<section class="contact-section mt-5 mb-3">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-lg-4 fw-bold"><h3 style="transform: translateY(1em);margin-bottom: 1.5em;">
+        Join our mailing list:</h3>
+      </div>
+
+      <div class="col col-sm col-md-10 col-lg-6">
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+      </div>
+
+      <div class="col-12 col-sm col-lg-2">
+        <button type="submit" class="btn btn-primary" style="width: 100%;margin-top:2em;">Submit</button>
+      </div>
+
     </div>
   </div>
 </section>
