--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
               <img src="./images/building3.fda5fb6f.jpg" alt="" class="card__img">
               <h4 class="fw-bold mt-1 mb-2">The corporate heading</h4>
-              <p>We provide some grate building what you are looking for we know.
+              <p>We oo provide some grate building what you are looking for we know.
                 for any help just contact us in down below.
               </p>
 
